--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,3 +40,8 @@ services:
         image: djfarrelly/maildev
         ports:
             - ${MAILDEV_PORT}:80
+
+    redis:
+        image: redis:4.0.14-alpine
+        ports:
+            - ${REDIS_PORT}:6379
